# metapi

./: .gitignore  .vstags  MANIFEST.in  README.md  README.org  Snakefile  build.sh  config.json  config.yaml  environment.yml  pyproject.toml  requirements.txt  run_metapi.py  samples.tsv  setup.cfg  setup.py  units.tsv
.circleci/: config.yml
.test/: Snakefile  config.yaml  samples.tsv  units.tsv
conda/: meta.yaml
config/: config.yaml  hadoop.yaml  sge.yaml
docs/: mag_workflow.dio  metapi.dio
metapi/: Snakefile  __about__.py  __init__.py  aligner.py  assembler.py  binner.py  check.py  checkmer.py  classifier.py  cluster.yaml  config.py  config.yaml  configer.py  core.py  corer.py  database.py  demultiplexer.py  merger.py  metacheck.py  metacluster.yaml  metaconfig.py  metaconfig.yaml  metapi.py  metareport.py  metasample.py  predictor.py  profiler.py  qcer.py  report.py  reporter.py  sample.py  sampler.py  simulator.py  taxonomyer.py  tooler.py  uploader.py
metapipe/: Snakefile  metacheck.py  metaconfig.py  metaconfig.yaml  metapipe.py  metasample.py
rules/: assembly.smk  binning.smk  rmhost.smk  trim.smk
scripts/: CAZyme_profiler.py  aggregate_genomecov.py  animf_cluster.py  asm_status_wrapper.py  assembler_wrapper.py  assembly_info.r  assemblyer_wrapper.py  asub.pl  asub.py  asub_v2.py  batch_prokka.py  cd-hit-para.v2.pl  checkm_ccsh_summary.py  checkm_cobin.py  checkm_cp_summary.py  checkm_link.py  clean_statout_to_matrix.py  clstr_szie_tab.py  compute_abundance.py  contigs_filter_by_len.py  contigs_from_sample.py  contigs_to_gene.py  cout_seq_by_line.py  (+51 more)
(+207 files in other folders)
